--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This project has been designed by Prakash Chatlani for his Brightspot project. It is a full-stack website with database work using SQL and PHP. It also utilizes HTML and CSS to create a functional and aesthetically pleasing webpage.
+"Automotive Times" was designed by Prakash Chatlani as a personal project to express his love for cars and to learn more about building a full-stack website.
+The project features a front-end with HTML and CSS and a back-end using SQL and PHP.
